--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-﻿altair==5.5.0
+altair==5.5.0
 attrs==24.3.0
 blinker==1.9.0
 cachetools==5.5.1
 certifi==2024.12.14
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+et_xmlfile==2.0.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
